# light_ik_godot

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  light_ik_godot.code-workspace
light_ik_plugin/: CMakeLists.txt
light_ik_plugin/src/: bone_chain.cpp  bone_chain.h  helpers.h  joint_constraints.cpp  joint_constraints.h  light_ik_plugin.cpp  light_ik_plugin.h  plugin.gdextension  register_types.cpp  register_types.h  visual_helper.cpp  visual_helper.h
plugin/: BonesCheck.glb  BonesCheck.glb.import  bones.tscn  bones_check.tscn  complex_bones.tscn  icon.svg.import  leg_bones_X_guided.tscn  main.tscn  project.godot  skeleton_base.tscn  test_bone.glb  test_bone.glb.import  test_bone.tscn
plugin/src/: bones.glb  bones.glb.import  complex_bones.glb  complex_bones.glb.import  leg_bones2.glb  leg_bones2.glb.import  skeleton_base.glb  skeleton_base.glb.import
